2014-05-23  Andreas Kling  <akling@apple.com>

        Templatize GC's destructor invocation for dtor type.
        <https://webkit.org/b/133231>

        Get rid of a branch in callDestructor() by templatizing it for
        the DestructorType. Removed JSCell::methodTableForDestruction()
        since this was the only call site and it was jumping through
        a bunch of unnecessary hoops.

        Reviewed by Geoffrey Garen.

        * heap/MarkedBlock.cpp:
        (JSC::MarkedBlock::callDestructor):
        (JSC::MarkedBlock::specializedSweep):
        * heap/MarkedBlock.h:
        * runtime/JSCell.h:
        * runtime/JSCellInlines.h:
        (JSC::JSCell::methodTableForDestruction): Deleted.

2014-05-23  Andreas Kling  <akling@apple.com>

        Support inline caching of RegExpMatchesArray.length
        <https://webkit.org/b/133234>

        Give RegExpMatchesArray.length the same treatment as JSArray in
        repatch so we don't have to go out of line on every access.

        ~13% speed-up on Octane/regexp.

        Reviewed by Geoffrey Garen.

        * jit/Repatch.cpp:
        (JSC::tryCacheGetByID):
        * runtime/RegExpMatchesArray.h:
        (JSC::isRegExpMatchesArray):

2014-05-22  Mark Lam  <mark.lam@apple.com>

        REGRESSION(r154797): Debugger crashes when stepping over an uncaught exception.
        <https://webkit.org/b/133182>

        Reviewed by Oliver Hunt.

        Before r154797, we used to clear the VM exception before calling into the
        debugger.  After r154797, we don't.  This patch will restore this clearing
        of the exception before calling into the debugger.

        Also added assertions after returning from calls into the debugger to
        ensure that the debugger did not introduce any exceptions.

        * interpreter/Interpreter.cpp:
        (JSC::unwindCallFrame):
        (JSC::Interpreter::unwind):
        (JSC::Interpreter::debug):