@@ -2582,7 +2582,6 @@ __ZN3WTF9HashTableIPN3JSC9CodeBlockENS_12KeyValuePairIS3_NS_6VectorINS1_24Byteco
 __ZN3WTF6VectorIN3JSC24BytecodeAndMachineOffsetELm0ENS_15CrashOnOverflowEEaSERKS4_
 __ZN3WTF6VectorIN3JSC24BytecodeAndMachineOffsetELm0ENS_15CrashOnOverflowEE15reserveCapacityEm
 __ZNK3JSC3DFG7OSRExit22codeLocationForRepatchEPNS_9CodeBlockE
-_operationCallCustomGetter
 _triggerReoptimizationNow
 __ZN3JSC9CodeBlock10reoptimizeEv
 __ZN3JSC9CodeBlock8jettisonEv
@@ -4752,7 +4751,6 @@ __ZN3JSC3DFG14SpeculativeJIT13callOperationEPFxPNS_9ExecStateEiPNS_15InlineCallF
 _lookupExceptionHandlerInStub
 __ZN3JSC3DFG14SpeculativeJIT32compileGetByValOnFloatTypedArrayERKNS_20TypedArrayDescriptorEPNS0_4NodeEm
 __ZN3JSC3DFG14SpeculativeJIT33compilePutByValForFloatTypedArrayERKNS_20TypedArrayDescriptorENS_12X86Registers10RegisterIDES6_PNS0_4NodeEm
-_operationCallGetter
 _operationGetInlinedArgumentByVal
 __ZN3JSC13EvalCodeBlock12jettisonImplEv
 __ZN3JSC14EvalExecutable21jettisonOptimizedCodeERNS_2VME
